*Empty MediaWiki Message*

--- a/Xasan_Dooy.mw
+++ b/Xasan_Dooy.mw
@@ -1,4 +1,4 @@
-Xaaji Xasan Maxamed Xuseen oo loo yaqaano Xasan Dheere ama Xasan Dooy, wuxuu dhashay 1937 kii magaalada Gaalkacyo, wuxuu ku koray degmada Beled Xaawo ee gobolka Gedo. Wuxuu guursaday 2 xaas, marka laysku daro intuu dhalay iyo waxay sii dhaleen waxay gaarayaan 50 qof.
+Xaaji Xasan Maxamed Xuseen oo loo yaqaano Xasan Dheere ama Xasan Dooy, wuxuu dhashay 1937 kii ku dhashay kuna koray degmada Beled Xaawo ee gobolka Gedo. Wuxuu kasoo dhalay Maxamed Xuseenoo loo yaqaan sidoo kale Axmed Xuseen oo ka tirsanaa askartii Ingiriiska kana gaaray darajada Saajin xukuma saldhigga dhexe ee Mandera. Xaaji Xasan Wuxuu guursaday 2 xaas, wuxuuna ifka uga tagay 11 wiil iyo 5 gabdhood.
 Xasan Dooy wuxuu qortay Ciidamada Booliska Soomaaliyeed 1/08/1960, magaalada Baydhabo, wuxuu Kuruudka ka galay Dugsiga Sare ee Booliska eek u yaal magaalada Muqdisho wuxuuna ku qaatay 9 bilood oo tababar askarinimo ah, wuxuuna markii u horaysay ka hawlgalay Saldhigga Boliiska Bari eek u dhaw Furdadii hore ee Xamar.
 
 17/12/1961, kadib afgambigii fashilmay, Xasan Dooy iyo askar uu ku jiro waxaa loo qaaday magaalada Hargeysa wuxuuna ka hawlgalayey saldhiga magaalada Hargeysa muddo 3 sano ah. Wuxuuna halkaas ka bilaabay barashada luuqadda Ingiriisiga wuxuuna isla sanadkii u horeeyey ka noqday dacwad qoraha saldhiga (OB writer), isla sanadkii labaadna wuxuu galay 1 sano oo barashada caafimaadka ah oo uu ka dhigtay Kuliyadii Caafimaadka ee la oran jiray Hargeisa Medical College.
