*Empty MediaWiki Message*

--- a/Cabdi_Indhadeero.mw
+++ b/Cabdi_Indhadeero.mw
@@ -1,5 +1,5 @@
 {{Macluumaad Qof Madax Ah
-| name=Cabdi cawad cali indhadeero <br>عبد عوض علي
+| name=Cabdi Indhadeero <br>عبد عوض علي
 
 |brith_blace= [[waridaad]] [[somaliland]]
 | death_date={{Dhimashada iyo sanadka|2006|6|7|1943|8|15|mf=y}}
