*Empty MediaWiki Message*

--- a/Cabdi_Indhadeero.mw
+++ b/Cabdi_Indhadeero.mw
@@ -9,9 +9,7 @@
 | signature=
 |}}
 
-'''Cabdi cawed cali indha deero'''
-
-Xaji cabdi cawad cali indgadeeri allah hau naxaristee waa aasaasihi iyo mulki lihi shirkada DEERO GROUP oo kamida kuwa ugu hantida badan somalida oo uu ganacsigedu gaadhi guud ahan somaliland ilaa ethiopia gobolada puntland,
+'''Cabdi Indhadeero''' waa aasaasihi iyo mulki lihi shirkada DEERO GROUP oo kamida kuwa ugu hantida badan somalida oo uu ganacsigedu gaadhi guud ahan somaliland ilaa ethiopia gobolada puntland,
 Shirkada hantideeda waxa lagu qiyaasay marki ay warbixino ka diyarisay shirkad ajanib ahi tijaarta dalka han
 Ti gaadhasa '''761million''', oo dollar
 Shirakadu waxa kalo ay leedahay dhismayaal waweyn oo ku kala yaa hargeisa burco berbera wajaale borame 
