*Empty MediaWiki Message*

--- a/Wikipedia:Contents%2FCategories.mw
+++ b/Wikipedia:Contents%2FCategories.mw
@@ -1,7 +1,7 @@
 <noinclude>{{pp-semi-protected|small=yes}}</noinclude>
 {{Wikipedia:Contents/Types layout
   |type=Categories
-  |cat1=Wikipedia contents
+  |cat1=Waxyaabaha ku jira Wikipedia
   |cat2=
 }}
 [[Category:Waxyaabaha ku jira Wikipedia|Qeybaha]]
