*Empty MediaWiki Message*

--- a/Degmada_Feer-feer.mw
+++ b/Degmada_Feer-feer.mw
@@ -1,7 +1,7 @@
-{{About|magaalada|firfir, nooc ka mid ah cuntada|fit-fit}}
+{{About|Magaalada|Feer-feer:Degmo katirsan Deegaanka Soomaalida.|Feer-feer}}
 
 {{Infobox settlement
-| official_name                   = Feerfeer
+| official_name                   = Feer-feer
 | native_name                     = 
 | image_skyline                   = 
 | imagesize                       = 
@@ -16,8 +16,8 @@
 | pushpin_map_caption             = Goobta ee kaga taalo Itoobiya
 | subdivision_type                = [[Dalalka caalamka|Dalka]]
 | subdivision_type1               = [[Gobolada Itoobiya|Gobolka]]
-| subdivision_name                = [[Itoobiya]]
-| subdivision_name1               = [[Somaali galbeed|Gobolka soomaalida]]
+| subdivision_name                = {{flag|Itoobiya}}
+| subdivision_name1               = [[Somaali galbeed|Dawlad Deegaanka Soomaalida]]
 | subdivision_type2               = 
 | subdivision_name2               = 
 | established_title               = 
