--- a/Bacaad.mw
+++ b/Bacaad.mw
@@ -69,3 +69,5 @@
 Inkastoo uu xadidan yahay horumarka ay samayasay magaaladani mudooyinkii u dameeyay hadana waa magaalo magac dheer, qiimo badana u lahayd bulshooyinkii jiray wixii ka horeeyay 1980- xiligaas oo ku dhowaa waqtigii la furay [[Dekada Boosaaso|Dekedda Magaalada Boosaaso]].
 Bacaad waxay leedahay dhul aad u weyn oo suurtagal ay tahay in siyaabo badan oo kala duwan looga faa'iidaysto, gaar ahaan hadiiba ay suurowdo in la balaarito Dekadda dabiicig ah ee Magaalada.
 <ref>http://travelingluck.com/Africa/Somalia/Bari/_65120_Bacaad.html</ref>
+==Tixraac==
+{{Reflist}}
