*Empty MediaWiki Message*

--- a/Maxamed_Faarax_Caydiid.mw
+++ b/Maxamed_Faarax_Caydiid.mw
@@ -11,13 +11,13 @@
 ! colspan="2" style="text-align: center;" | Xafiiska intuu joogay
 |-
 ! Dhashay:
-| 15 [[Diseembar]] [[1934]]
+| 15 [[December]] [[1934]]
 |-
 ! Ku dhashay:
 | [[Mudug]] [[Soomaaliya]]
 |-
 ! Dhintay:
-| 3 [[Agoosto]] [[1996]](''jiray 61sano'')
+| 3 [[August]] [[1996]](''jiray 61sano'')
 |-
 ! Kudhintay:
 | [[Muqdisho]], [[Soomaaliya]]
