/* Cigalle Axmed */ new section

--- a/Talk:Murursade.mw
+++ b/Talk:Murursade.mw
@@ -81,3 +81,7 @@ Magaca murursade ma ahan ee fadlan naga badala
 == Talo ==
 
 Fadlan magaca beesha naga saxa, murursade wax la dhaho majiran, beesha magaceeda waa MURUSADE [[User:Uweeysow|Uweeysow]] ([[User talk:Uweeysow|talk]]) 18:08, 19 Sebteembar 2019 (UTC)
+
+== Cigalle Axmed ==
+
+Cigalle Axmed [[User:Cabdinuur|Cabdinuur]] ([[User talk:Cabdinuur|wadahadal]]) 14:39, 2 Agoosto 2020 (UTC)
