/* Cigalle Axmed */ new section

--- a/Talk:Galgaduud.mw
+++ b/Talk:Galgaduud.mw
@@ -1,1 +1,5 @@
 Beesha Cigale Axmed Saleebaan
+
+== Cigalle Axmed ==
+
+Cigalle Axmed [[User:Cabdinuur|Cabdinuur]] ([[User talk:Cabdinuur|wadahadal]]) 14:49, 2 Agoosto 2020 (UTC)
