*Empty MediaWiki Message*

--- a/Laascaanood.mw
+++ b/Laascaanood.mw
@@ -2,9 +2,9 @@
 |official_name          =Laascaanood
 |other_name             =لاسعانود
 |native_name            =<small>''Las Anod''</small>
-|nickname               = 
+|nickname               = Las Anod, xarunta beesha aarawiish
 |settlement_type        =Magaalo
-|motto                  =
+|motto                  = Laaska, xarunta reer darawiish
 |image_skyline          =Lasanod town.jpg
 |image_caption          = 
 |image_flag             =
