*Empty MediaWiki Message*

--- a/Laascaanood.mw
+++ b/Laascaanood.mw
@@ -2,7 +2,7 @@
 |official_name          =Laascaanood
 |other_name             =لاسعانود
 |native_name            =<small>''Las Anod''</small>
-|nickname               = Las Anod, xarunta beesha aarawiish
+|nickname               = Las Anod, xarunta beesha darawiish
 |settlement_type        =Magaalo
 |motto                  = Laaska, xarunta reer darawiish
 |image_skyline          =Lasanod town.jpg
