*Empty MediaWiki Message*

--- a/Maakhir.mw
+++ b/Maakhir.mw
@@ -7,7 +7,7 @@
 |flag_p1 = USP - United Somali Party.jpg
 |s1 = {{flag|Somaliland}}
 |flag_s1 = Flag of Puntland.svg
-|image_flag = File:Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
+|image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
 |image_coat = Coat of Arms of Maakhir.svg
 |image_map = location maakhir.png
 |national_motto =
