*Empty MediaWiki Message*

--- a/SSC_(dhulka_Darawiish).mw
+++ b/SSC_(dhulka_Darawiish).mw
@@ -2,16 +2,16 @@
 |conventional_long_name = SSC State
 |native_name = {{unbulleted list|item_style=font-size:88%; |{{native name|so|Dowlad Goboleedka SSC}} |{{native name|ar|{{lower|0.1em|{{resize|120%|}}}}&nbsp;|italics=off}} |''{{transl|ar|Wilāyat Arḍ al-Sool Sanaag Cayn}}''}}
 |common_name = SSC State
-|image_flag = Flag of SSC.svg  
+|image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
 |image_coat = 
-|image_map = KhatumoStateloc.PNG
+|image_map = SSC darawiish disputed region.png
 |national_motto = 
 |national_anthem = [[Qolobaa Calankeed]]
 |official_languages = {{hlist |[[Somali language|Somali]] |[[Arabic language|Arabic]]}}
 |demonym = 
-|capital = [[Buuhoodle]] (de jure), Buuhoodle (de facto)
+|capital = [[Buuhoodle]] (de jure), <br>Buuhoodle (de facto)
 |coordinates = {{Coord|9|8|N|48|25|E|type:city}}
-|largest_city = Buuhoodle (de jure), none (de facto)
+|largest_city = Badhan (de jure), Badhan (de facto)
 |government_type = [[Autonomy|Autonomous]] [[Presidential system|presidential democracy]]
 |leader_title1 = President
 |leader_name1 = Abdul Sulub
@@ -46,14 +46,16 @@
 |cctld = [[.so]]
 }}
 
-'''SSC''' ama '''Hoggaanka Badbaadinta iyo Mideynta Sool Sanaag iyo Cayn''' waa dallacsiiyaasha Darawiish oo ka kooban ciidanka Falaaluug. Abuuridda waxay ku dhisneyd dawladda Darawiish iyo [[xuduudkii 1908]].
+'''SSC''' ama '''Sool Sanaag iyo Cayn''' waa hoggaanka hadbaadinta iyo mideynta Maakhir iyo Khaatumo.
 
 ==Taariikh==
+[[File:Flag of SSC.svg|thumb|Calankii hore]]
+
 Caasimadeyda waxay ehayd Buuhoodle ama Las Anod. Waxay ahayd jabhad iyo maamul oo ka soo horjeedo maamulada la dariska ah, gaar ahaan maamulka puntland iyo somaliland oo ah maamul gooni isu taag. SSC waxee ka koobantahay gobolada [[Sool]], [[Sanaag]] iyo [[Cayn]]. Maamulkaan runtii waa maamul wadani ah oo leh taariikh aad u dheer, dhulka maanta loogu yeero SSC waxee markeeda hore eheed dhulkii daraawiishta.Waa jabhad iyo maamul oo wadani ah oo aad u taageerto midnimada shacabka soomaaliyeed.Shacabka SSC waxee mararka qaar maamul ahaan hoostagaan Maamulka [[Puntland]].
 
 ==Taariikhda SSC==
 
-Taariikhda SSC waxee raacsantahay taariikhdii Daraawiishta oo ah taariikh aad u dheer, waa marka loo fiiriyo deegaanada ee ka koobantahay SSC.Magaca SSC waxaa la abaabulay wixii ka danbeeyay burburkii dowladii dhexe, waana magac ee soo alifeen dadka u dhashay deegaanada SSC, waa mid lagu abaabulay sidii shacabka deegaanadaas loo badbaadin lahaa loona mideyn lahaa.Dadka qaarkood waxee SSC u maleeyaan in ee tahay Ciidamo difaacaayo deegaanada SSC oo kaliya, balse run ahaantii SSC waxaa la isku dhahaa dhamaan shacabka degan gobolada ee ka koobantahay SSC.
+Taariikhda SSC waxee raacsantahay taariikhdii Daraawiishta oo ah taariikh aad u dheer, waa marka loo fiiriyo deegaanada ee ka koobantahay SSC.Magaca SSC waxaa la abaabulay wixii ka danbeeyay burburkii dowladii dhexe, waana magac ee soo alifeen dadka u dhashay deegaanada SSC, waa mid lagu abaabulay sidii shacabka deegaanadaas loo badbaadin lahaa loona mideyn lahaa.Dadka qaarkood waxee SSC u maleeyaan in ee tahay Ciidamo difaacaayo deegaanada SSC oo kaliya, balse run ahaantii SSC waxaa la isku dhahaa dhamaan shacabka degan gobolada ee ka koobantahay SSC, iyo ka dib, dallacsiiyaasha Darawiish oo ka kooban ciidanka Falaaluug. Abuuridda waxay ku dhisneyd dawladda Darawiish iyo [[xuduudkii 1908]].
                           
 
 
