--- a/Somaliaaaa.mw
+++ b/Somaliaaaa.mw
@@ -250,6 +250,8 @@ Siyaasadda soomaaliya waxay soo martay isbedbedel badan. Intii uu socday [[Dagaa
 Insurgency|work=Wikileaks|publisher=Wikileaks|location=Langley, By Andrew McGregor|year=2007|url=https://wikileaks.org/gifiles/attach/166/166594_TM_005_008%20-%20Jamestown%20Terrorism%20Monitor%20-%20ND%20armed%20groups%20part%202.pdf|accessdate=2007-04-26 ]}}</ref> [[Midowga Maxkamadaha Islaamiga]] ayaa gobollada koonfurta iyo bartamaha Soomaaliya isku fidiyay taasoo ka caraysiisay [[Itoobiya]] una aragtay fusad ay kula dagaalami karto ficilada ay sameeyeen. Markii meesha laga saaray Maxaakiimta ayaa waxaa soo baxay kooxo la magacbaxay Muqaawamo kana aas aasamay magaalada [[Muqdisho]] intii ay socotay muqaawamada waxaa barbar socday wadahadal UN-ka loo maray kaasoo uu garwadeen ka ahaa Axmed Walad Cabadlla keentayna in laga saaro Itoobiya dalka Soomaaliya bartamihii sanadkii 2009. Waxaa maxaakiimta ka farcamay kooxda [[Al-Shabaab]] taasoo dalka dhibaatadii ka jirtay sii murjisay, taasoo dagaal la gashay dawlad lagu soo dhisay dalka [[Jabuuti]] Madaxweyne ka ahaa [[Sheekh Shariif Axmed]] 2010-2011 dagaal ba'an ku dhexmaray magaalada muqdisho iyo nawaaxigeeda, Madaxweyne Shariif xoogaa rajo ah ayay soo celisay Dawladdiisii loogu magacdaray Midnimo Qaran dawladdaas oo muqdisho ka fogaysay qatartii Al-shabaab iyadoo gacan ka helaysa [[Amisom|AMISOM]] wuxuu diyaariyay doorasho aad loogu riyaaqay,<ref name="Aassladc">{{cite web|title=الرئيس الصومالي السابق: من كرسي الرئاسة إلى الدراسة|url=[http://www.alarabiya.net/articles/2013/01/16/260703.html|publisher=Al-arabiya|accessdate=16 Jan 2013}}</ref> kaasoo xilka si nabad ah ugu wareejiyay madaxweyne [[Xasan Sheekh Maxamuud]]. Waxaana taa xigay dawladdii uu madaxweynaha ka ahaa [[Xasan Sheekh Maxamuud]] taasoo ku guulaysatay isu soo dhoweyn Soomaalida dhexdeeda ah iyo dastuurka oo loo hogaansamo.
 
 ==Qaanuunka==
+[[File:SSC darawiish disputed region.png|thumb|Deegaanada [[Sool, Sanaag & Cayn]] waa dhul muransan]]
+
 Soomaaliya waxaa ka jira saddex nidaam qaanuun oo kala gadisan, waa: Qaanuunka madaniga, [[Shareecada Islaamka]] iyo xoogaa qawaaniin ah oo ay leeyihiin beelaha waana dhaqan soo jireen ah waxaana loo yaqaan Xeer.
 ===Qaanuunka madaniga===
 Iyadoo uu ku dhacay burbur balaaran kaasoo hareeyay nidaamka cadaaladda Soomaaliya ka dib burburkii dawladdii Hantiwadaag laakiin waxaa la isku dayay dib u habaynta iyo dhisidda nidaamka garsoorka Soomaaliya iyo howlgalintiisa dhanka maamul goboleedyada Soomaaliya sida [[Somaliland]] iyo [[Puntland]] kuwaas oo leh xukun hoosaad, laakiin dawladda dhexe waxay diyaarisay bu'da nidaamka garsoorka cusub.
