*Empty MediaWiki Message*

--- a/Darwiishland.mw
+++ b/Darwiishland.mw
@@ -2,7 +2,7 @@
 |native_name = <big>ولاية الشمالية الصومال</big>
 |conventional_long_name = bake kundi State of Somalia
 |common_name = Northland
-|image_flag = Flag of Somalia.svg
+|image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
 |image_coat = Coat of arms of Somalia.svg
 |image_map = location northland.png
 |footnotes = 
