*Empty MediaWiki Message*

--- a/Darwiishland.mw
+++ b/Darwiishland.mw
@@ -1,6 +1,6 @@
 {{Infobox country
 |native_name = <big>ولاية الشمالية الصومال</big>
-|conventional_long_name = bake kundi State of Somalia
+|conventional_long_name = Darwiishland State of Somalia
 |common_name = Northland
 |image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
 |image_coat = Coat of arms of Somalia.svg
