--- a/Juqraafiga_Soomaaliya.mw
+++ b/Juqraafiga_Soomaaliya.mw
@@ -6,6 +6,7 @@
 Soomaaliya waxay dhacdaa bariga fog ee qaaradda afrika taasoo u muuqaal eg qaabka ay u samaysanyahay geeska [[Wayil|wayiyisha]] kaasoo ku badan qaaradda afrika sidaa daraadeed waxaa loogu magacdaray [[Geeska Afrika|geeska afrika]]. waxay soomaaliya ku fidsantahay inta u dhaxeysa loolka 10 waqooyi dhigta 49 bari. wuxuu gaarayaa bedka Soomaaliya 637,657 kiiloomitir iskuwareeg ah waxaa ka mid ah 10,320 kiiloomitir iskuwareeg ah waxay biyaha ka hayaan ilaa 1.6% ee bedeka guud ee dalka waxay waxyar uun ka yartahay gobolka [[Texas]] ee maraykanka. Sidoo kale waxay Soomaaliya leedahay xuduud barri ah oo dhererkeedu gaaraya 2,340 km ee kala berta dhammaan [[Jabuuti]] masaafo dhan 58 kiiloometer, [[Itoobiya]] masaafo dhan 1,600 kiiloomiter iyo [[Kiinya]] masaafo dhan 682 km, sidaa daraadeed Soomaaliya waxay leedahay xeebta ugu dheer guud ahaan qaaradda Afrika, iyadoo gaareesya xeebta Soomaaliya dhererkeeda  3,025 kiiloomitir ; dhul badeedka Soomaaliya wuxuu gaarayaa ilaa  200 [[Mayl]] Bad gudaha [[Badweynta Hindiya]].
 
 == Qaabka dhulka ==
+[[File:Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg|thumb|Dhulka [[SSC]] waa dhul muransan]]
 
 == Bey'ada ==
 
