*Empty MediaWiki Message*

--- a/Puntland.mw
+++ b/Puntland.mw
@@ -95,6 +95,7 @@ Xarumahaas caafimaadka waxa ay dhamaantood ku kala yaalan dhamaan degaanada Punt
 Guud ahaan xaalada caafimaad ee dalka waa mid degan waxaana si dhameystiran loo xakameeyey cuduraddii dilaacey 3 bilood ee la soo dhaafey Dalgaalkii galmudug ka dacay waa la gu laayey puntland markaasna puntland way jabtey.
 
 '''Kor u qaadista wadashaqeynta hayadaha'''
+[[Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg|thumb|Dhulka [[Sool, Sanaag iyo Cayn]] waa dhul muransan]]
 
 Waxa la sameeyey nidaam wadashaqeyn hayadaha ka shaqeeya caafimaadka Puntland si wax ku ool u noqdaan mashaaricda ay nagalaa shaqeeyan Hayadaha caalamiga ah.
 
