*Empty MediaWiki Message*

--- a/Laab.mw
+++ b/Laab.mw
@@ -1,14 +1,12 @@
-'''Laab'''
+[[File:Grays Anatomy image1219.gif|thumb|Ubucdu waa qeybta dhexe ee [[jidh]]ka [[dad]]ka.]]
 
-[[File:Grays Anatomy image1219.gif|Ubucdu waa qeybta dhexe ee [[jidh]]ka [[dad]]ka.]]
-
-'''Laab''' ([[ingiriis]]: Chest) waa waaxda dhexe ee qaab-dhismeedka [[ubuc]]da [[jidh]]ka ee [[dad]]ka iyo [[xayawaan]]ka. 
-Laabtu waa lakabka dhexe ee [[jidh]]ka taas oo ka kooban [[feedh]]o, [[sambab]]o, [[wadne]] iyo wixii ku dhex jira intaas.
+'''Laab''' ({{lang-en|Chest}}) waa waaxda dhexe ee qaab-dhismeedka [[ubuc]]da [[jidh]]ka ee [[dad]]ka iyo [[xayawaan]]ka. Laabtu waa lakabka dhexe ee [[jidh]]ka taas oo ka kooban [[feedh]]o, [[sambab]]o, [[wadne]] iyo wixii ku dhex jira intaas.
 
 [[File:Heart-and-lungs.jpg|thumb|Labada [[Sambab]], [[wadne|wadnaha]] iyo [[xidid]]aha [[dad]]ka oo lagu daray [[feedh]]aha ayaa waxa la isku yidhaahdaa [[laab]].]]
 
 [[Dhabar]]ku kuma jiro laabta, laakiin wuxuu ka mid yahay [[ubuc]]da. 
-
+==Tixraac==
+{{reflist}}
 {{Gumud}}
 
 [[Category:Baayooloji]]
