*Empty MediaWiki Message*

--- a/Xasan_Barsane.mw
+++ b/Xasan_Barsane.mw
@@ -1,3 +1,5 @@
+{{Caddayn u baahan}}
+{{wargelin|Qoraalka bogan waa mid la [[tirtir]]i rabo.}}
 '''Sheekh Xasan Barsane “''' ( 1853 – 1927 ) Waxuu ahaa abaanduul oo ka mid ahaa ururka [[Urwayni]] ee [[Soomaaliyeed]]. 
 [[File:Sheekh Xasan Barsane.jpeg|right|[[File:Sheekh Xasan Barsane.jpeg|thumb]]]]
 
