*Empty MediaWiki Message*

--- a/Cali_barre.mw
+++ b/Cali_barre.mw
@@ -7,7 +7,7 @@ Waxaana kamid ah ereyadda dadku had iyo jeer soo qaataan sida
 Cali barre waxa uu habar jeclo iyo soomaalida inteeda kale kuleeyahay
 Sumcad iyo sharaf aan lasoo koobi karin
 Cali bare waxaa ka dhashay.
-Xaaji Suudi oo ahaa aasaasihii Darawiishta (Haji Sudi)(1857–1920) HE Maxamed Xaashi Abdi, oo ahaa wasiir iyo ambasador, General Cismaan Cawed Xaashi, maxamuud xaashi cabdi ( ex wasiirka madaxtooyadda ee dawladdi [[Axmed Maxamed Maxamuud (Siilaanyo)|silaanyo]]) Xildhibaaan Axmed Ducaale Bulaale, xildhibaan aamina cumar jaamac ( xubinta ugu firfircoon [[Baarlamaanka Federaalka Soomaaliya|baarlamaanka]] somali )
+Xaaji Suudi oo ahaa afhayeeka sayyidka ee [[Darawiishta]] (Haji Sudi)(1857–1920) HE Maxamed Xaashi Abdi, oo ahaa wasiir iyo ambasador, General Cismaan Cawed Xaashi, maxamuud xaashi cabdi ( ex wasiirka madaxtooyadda ee dawladdi [[Axmed Maxamed Maxamuud (Siilaanyo)|silaanyo]]) Xildhibaaan Axmed Ducaale Bulaale, xildhibaan aamina cumar jaamac ( xubinta ugu firfircoon [[Baarlamaanka Federaalka Soomaaliya|baarlamaanka]] somali )
 saleebaan dirir (gudoomiyaha jaamacdda burco)
 xaaji maxamed xuseen aadan (xaaji yare) gudoomiyihii jamaacada ikhwaanul muslimiinka ee gobolka [[togdheer]] [[1982]]-[[1991]
 Degaan ahaan [[Cali barre|cali]] [[Cali barre|bare]] wuxuu degaa [[Gobolada Somaliland|gobalada]] [[sool]]. [[sanaag]]. [[saraar]], [[togdheer]], iyo qaybo ka mid ah [[Buuhoodle|degmada]] [[buuhoodle]].
