*Empty MediaWiki Message*

--- a/SSC_(dhulka_Darawiish).mw
+++ b/SSC_(dhulka_Darawiish).mw
@@ -3,7 +3,7 @@
 |native_name = {{unbulleted list|item_style=font-size:88%; |{{native name|so|Dowlad Goboleedka SSC}} |{{native name|ar|{{lower|0.1em|{{resize|120%|}}}}&nbsp;|italics=off}} |''{{transl|ar|Wilāyat Arḍ al-Sool Sanaag Cayn}}''}}
 |common_name = SSC State
 |image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
-|image_coat = 
+|image_coat = Darawiish SSC crest.jpg
 |image_map = SSC darawiish disputed region.png
 |national_motto = 
 |national_anthem = [[Qolobaa Calankeed]]
