*Empty MediaWiki Message*

--- a/Maakhir.mw
+++ b/Maakhir.mw
@@ -8,7 +8,7 @@
 |s1 = {{flag|Somaliland}}
 |flag_s1 = Flag of Puntland.svg
 |image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
-|image_coat = Coat of Arms of Maakhir.svg
+|image_coat = File:Darawiish SSC crest.jpg 
 |image_map = location maakhir.png
 |national_motto =
 |national_anthem = ''[[Soomaaliyeey toosoo]]''
@@ -50,6 +50,7 @@ Maakhir claimed the following administrative divisions:
 **[[Ceel daahir]]
 **[[Majiyahan]]
 ===Cities and towns===
+[[File:Coat of Arms of Maakhir.svg|thumb|astaanta hore]]
 The biggest cities in the area claimed by Maakhir Authority were [[Badhan, Sanaag|Badhan]], [[Las Khorey]], [[Dhahar, Sanaag|Dhahar]], [[Buraan]], [[Elaayo]], [[Galgala]], [[Hingalol]], [[Damalla-Hagare]], [[Baragaha qol]] and [[Erigavo]].
 
 ==Politics and government==
