*Empty MediaWiki Message*

--- a/Maakhir.mw
+++ b/Maakhir.mw
@@ -8,7 +8,7 @@
 |s1 = {{flag|Somaliland}}
 |flag_s1 = Flag of Puntland.svg
 |image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
-|image_coat = File:Darawiish SSC crest.jpg 
+|image_coat = Darawiish SSC crest.jpg 
 |image_map = location maakhir.png
 |national_motto =
 |national_anthem = ''[[Soomaaliyeey toosoo]]''
