*Empty MediaWiki Message*

--- a/Khaatumo.mw
+++ b/Khaatumo.mw
@@ -2,7 +2,7 @@
 |conventional_long_name = Dowlad Goboleedka Khaatumo ee Soomaaliya
 |common_name = Khatumo
 |image_flag = Darawiish (khatumo) flag.png 
-|image_coat = 
+|image_coat =  Darawiish SSC crest.jpg
 |image_map = KhatumoStateloc.PNG
 |national_motto = 
 |demonym = Khatumite<ref name=2009factbook>{{cite web |url=https://www.cia.gov/library/publications/the-world-factbook/geos/so.html |title=Somalia |accessdate=31 May 2009 |date=14 May 2009 |work=[[World Factbook]] |publisher=[[Central Intelligence Agency]]}}</ref>
