*Empty MediaWiki Message*

--- a/Af_Soomaali.mw
+++ b/Af_Soomaali.mw
@@ -10,7 +10,7 @@
 |fam3=[[Geeska Afrika|Bariga Deegaanad Hoose]]
 |fam4=[[Soomaali|Somali-Weyn]]
 |fam5=[[Af-soomaali]]
-|nation={{flagcountry|Soomaaliya}}, {{flagcountry|Somaliland}}
+|nation={{flagcountry|Soomaaliya}}, {{flagcountry|Somaliland}}, {{Flagicon image|Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg}}
 |iso1=so
 |iso2=som
 |iso3=som
