*Empty MediaWiki Message*

--- a/Gobolada_Soomaaliya.mw
+++ b/Gobolada_Soomaaliya.mw
@@ -1,3 +1,4 @@
+[[File:Insignia - SSC ee beelaha darawiish.jpg|thumb|Deegaanada [[SSC]] waa [[dhul muransan]].]]
 {{Siyaasadda Soomaaliya}}
 '''Soomaalaiya waxee u qeebsamtaa 18 gobol''' sida uu qabo dastuurka soomaaliya Cutubka 1aad, Qodobka 7aad, faqradiisa 1aad, 2aad iyo 3aad 
 * Gobannimada Jamhuuriyadda soomaaliya waxay koobeysaa dhulka Jamhuuriyadda oo idil, oo ay ku jiraan berriga, jasiiradaha, biyaha goboleed, ururkooda, hawadooda iyo geyi-qaaradeedka.
