--- a/Jadwalka_Magacyada.mw
+++ b/Jadwalka_Magacyada.mw
@@ -1,89 +1,1 @@
-::''Sharaxaad badan iyo faahfaahin [[magac]]yada, fadlan fiiri [[Magacyada Soomaalida]].''
-
-Magacyada dadka Soomaalida ah iyo kuwa dadka (Islaam)ka ahi aad ayay u badan yihiin, {boqolka} magac ee ugu muhiimsan isla markaana loogu isticmaalka badan yahay waxaa ka mid ah:
-
-{{Template:Magac}}
-
-= Qoraalo La Mid Ah =
-* [[Ayuub]]
-* [[Aadam]]
-* [[Axmed]]
-* [[Aamina]]
-* [[Aadan]]
-* [[Abu Baker]]
-* [[Aasiya]]
-* [[Abiib]]
-* [[Cali]]
-* [[Canab]]
-* [[Ciise]]
-* [[Cumar]]
-* [[Cabdi]]
-** [[Cabdi Raxmaan]]
-** [[Cabdi Raxiim]]
-** [[Cabdi Qani]]
-** [[Cabdi Rasaaq]]
-** [[Cabdi Maalik]]
-* [[Caynaan]]
-* [[Daa'uud]]
-* [[Dudub]]
-* [[Geedi]]
-* [[Foosiya]]
-* [[Faarax]]
-* [[Khadar]]
-* [[Khadra]]
-* [[Ibraahim]]
-* [[Ismaaciil]]
-* [[Ilyaas]]
-* [[Iqbaal]]
-* [[Idil]]
-* [[Idiris]]
-* [[Hibo]]
-* [[Hodan]]
-* [[Huud]]
-* [[Luul]]
-* [[Maxamed]]
-* [[Muxumed]]
-* [[Maxamuud]]
-* [[Maryam]]
-* [[Maslax]]
-* [[Mowliid]]
-* [[Raage]]
-* [[Samatar]]
-* [[Muuse]]
-* [[Nuux]]
-* [[Safiya]]
-* [[Saynab]]
-* [[Siraad]]
-* [[Sacaada]]
-* [[Suleekha]]
-* [[Sacdiya]]
-* [[Saalax]]
-* [[Shuceyb]]
-* Shamsudiin
-* [[Suleymaan]]
-* [[Yuusuf]]
-* [[Yaxye]]
-* [[Yacquub]]
-* [[Yoonis]]
-* [[Xareed]]
-* [[Xuseen]]
-* [[Xasan]]
-*
-
-{{Reflist}}XOGTA
-
-[[Category:Magac]]
-[[Category:Magacyada Islaamka]]
-[[Category:Magacyada Soomaalida]]
-[[Category:Kitaab]]
-[[Category:Nabiyada Islaamka]]
-[[Category:Islaam]]
-[[Category:Quraan]]
-[[Category:Islam]]
-[[Category:Masiixiyad]]
-[[Category:Diin]]
-[[Category:Taariikh]]
-[[Category:Aqoon]]
-[[Category:Kalandar]]
-[[Category:Nabi]]
-[[Category:Aadam iyo Xaawo]]
+#redirect [[Magacyada Soomaaliyeed]]
