*Empty MediaWiki Message*

--- a/Aadan_Daar.mw
+++ b/Aadan_Daar.mw
@@ -43,7 +43,7 @@
 | [[Somali Youth League]](SYL)
 |-
 |}
-'''Aadan Cabdulle Cismaan Daar''' ({{lang-en|''Aden Abdulle Osman Daar''}}, {{lang-ar|آدم عبد الله عثمان دار}}) (dhashay 1908; geeriyooday Juun 8, 2007), wuxuu ahaa [[siyaasi]] [[Soomaali]]yeed, hogaamiye qaran, iyo [[Madaxweyneyaashii Soomaaliya|Madaxweynihii koowaad]] ee [[Soomaaliya|Jamhuuriyada Soomaaliya]] kaasi oo xilka hayay 1dii Luuliyo 1960 ilaa 10kii Juun, 1967.<ref>[http://www.worldstatesmen.org/Somalia.html Somalia] - ''Worldstatesmen.com''</ref>
+'''Aadan Daar''' ama '''Aadan Adde''' ({{lang-en|''Aden Abdulle Osman Daar''}}, {{lang-ar|آدم عبد الله عثمان دار}}) (dhashay 1908; geeriyooday Juun 8, 2007), wuxuu ahaa [[siyaasi]] [[Soomaali]]yeed, hogaamiye qaran, iyo [[Madaxweyneyaashii Soomaaliya|Madaxweynihii koowaad]] ee [[Soomaaliya|Jamhuuriyada Soomaaliya]] kaasi oo xilka hayay 1dii Luuliyo 1960 ilaa 10kii Juun, 1967.<ref>[http://www.worldstatesmen.org/Somalia.html Somalia] - ''Worldstatesmen.com''</ref>
 ==Taariikh==
 Aadan Cadde waxaa uu ku dhashey magaalada [[Beledweyne]] ee dalka [[Soomaaliya]] sanadkii [[1908]] wuxuuna ku geeriyoodey magaalada [[Nayroobi]] ee dalka [[Kenya]] 8 [[Juun]] [[2007]]. Wuxuu waxbarashadiisii dugsiyada Qur'aanka, dugsiyada hoose, dhexe ku qaatay magaalada [[Muqdisho]]. 
 Wuxuuna sameyay dhaqdhaqaaq ganacsi intii uusan ku biirin ka hor xisbigii Leegada ee [[SYL]] bishii [[Febraayo]] sanadkii 1944. Sanadkii 1946 wuxuu ka mid noqday xubnihii maamulka ee xisbigaas, waxaa loo doortay in uu noqdo xoghayaha xisbigaas ee degmada [[Beledweyne]].
