*Empty MediaWiki Message*

--- a/Muqdisho.mw
+++ b/Muqdisho.mw
@@ -56,14 +56,13 @@ Waxaa magaalada Muqdisho dhidibada loo aasay waqti aad u fog oo aay taariikhyaha
 Muqdisho waxey ahaan jirtay xarun [[ganacsi]] iyo marin kala qeybiya [[Hindiya]] iyo [[Yurub]] (inta aan la qodin [[Kanaalka Suwees]]) iyo [[jaziirada carabta]] iyo xeebta Afrikada bari Magaalada Muqdisho waxey ka koobnaan jirtay 6 xaafadood ama tuulo oo aay deganaayeen qabaail, xaafad kasto waxaa xukumi jiray Sheekh, xaafadaha waxey lahaayeen golaha odayaasha sida qaabka federaalka ah oo kulmiya dhamaan xaafadahaas loogana tashan jiray arimaha magaalada Qarnigii 4aad ee miilaadiga magaalada Muqdisho isku badashay nidaam ama maamul u eg saldanad.
 
 == Magacaabida Magaca Muqdisho ==
-[[File:Jidadka xamar2.jpg|thumb|259px|jidadka xamar|link=Special:FilePath/Jidadka_xamar2.jpg]] 
-[[File:Jidadka xamar.jpg|thumb|259px|xamar 1980meeyadi|link=Special:FilePath/Jidadka_xamar.jpg]]
+[[File:SSC darawiish disputed region.png|thumb|259px|dhulka [[SSC]].]]
 The asalka magaca Muqdisho ayaa aragtiyo badan oo ay ka mid yihiin ka [[Af-Soomaali|Soomaali]] erayga ''Muuq Disho'' taasoo la micno ah ''hortiisa-dilaaga'' <ref>Horn of Africa - Volume 2, Issue 4 - Page 34, 1979</ref>, 
 
 ama reer Faaris erayga ''Maq'ad-i-Shah'' {{Lang|fa|مقعد شاه}}  ), oo macnaheedu yahay "kursiga Shah". <ref>{{Cite journal}}</ref> Waxaa loo yaqaanaa Xamar (Af-Ingiriis: ''Xamar'' ). Fikrad kale ayaa ah in laga soo qaatay xididka carabiga ee 'mqds', oo macnaheedu yahay "meelay ku yaalliin (meel)". . ''Sahamin'' qarnigii 16-aad [[ Leo Africanus|Leo Africanus wuxuu]] magaalada u yaqaanay ''Magadazo'' (alt). ''Magadoxo'' ). <ref name="Leo">cite book |author1=Leo Africanus |title=The History and Description of Africa |date=1526 |publisher=Hakluyt Society |pages=51–54 |url=https://archive.org/stream/historyanddescr03porygoog#page/n180/mode/2up |accessdate=15 July 2017</ref> 
 
 <br />
-[[File:Maamulgoboleedka Soomaaliya.png||thumb|maamulgoboleedyo ee soomaaliya.]]
+[[File:Insignia - SSC ee beelaha darawiish.jpg|thumb|[[SSC]] waa dhul muransan.]]
 
 == Waqtiyadii qarniyadii hore ==
 Muqdisho qayb ka mid ah uu ahaa [[Soomaali magaalo-goboleedyada]] in ku hawlan shabakad ganacsi faa'iido badan xira [[Soomaalida|Soomaali]] baayacmushtariyaasha la [[ Phenicia|Foynike]], [[Boqortooyada Ptolemaic|Ptolemic Masar]], [[Giriiga|Greece]], [[ Parthia|Parthian Faaris]], [[ Reer Sabaay|Saba]], [[ Nabataea|Nabataea]] iyo [[ Boqortooyada Roomaanka|Boqortooyada Roomaanka]] . Badmaaxiinta Soomaaliyeed ayaa adeegsaday markabkii hore ee badda Soomaaliya ee loo yaqaan ' ''[[ Beden|sariirta'<nowiki/>]]'' si ay xamuulkooda u qaadaan. <ref name="ReferenceA">Journal of African History pg.50 by John Donnelly Fage and Roland Anthony Oliver</ref> 
