*Empty MediaWiki Message*

--- a/Degmooyinka_Gobolka_Banaadir.mw
+++ b/Degmooyinka_Gobolka_Banaadir.mw
@@ -1,3 +1,5 @@
+[[File:SSC darawiish disputed region.png|thumb|Maamulka federaalka ee Benadir wuxuu [[SSC]] u arka dhul muransan]]
+
 '''Degmooyinka Muqdisho''' waa degmooyinka ay ka kooban tahay caasimada dalka [[Soomaaliya]] ee [[Muqdisho]] ama [[Xamar]].
 * [[Boondheere]] 
 * [[Cabdicasiis]]
