*Empty MediaWiki Message*

--- a/Soomaali_Alifbeet.mw
+++ b/Soomaali_Alifbeet.mw
@@ -10,7 +10,7 @@
 [[File:Soomaali Alfabet.png|thumb|Alifbeetka [[Far Soomaali]]ga]]
 
 [[File:Ciismaniya.jpg|thumb|Farta Cusmaaniyada ee [[Far Soomaali|Qoraal Soomaaliga]]]]
-'''Soomaali Alifbeet''' ({{lang-en|Somali alphabet}}; {{lang-ar|الأبجدية الصومالية}}) waa nidaam [[xaraf|xarfo]] loo habeeyay si kala horeeysa taasi oo loo isticmaalo in lagu qoro [[Af Soomaali|Luuqada Soomaaliga]]. Alifbeetku waa aasaaska dhamaan wax qorista farta. Tusaale ahaan, [[Af Soomaali]]gu wuxuu leeyahay dhowr nooc oo [[Far Soomaali]] ah, laakiin waxaa si sharci ah loo isticmaala qaabka ''laatiiniga'' oo [[Soomaaliya|dowlada Soomaaliya]] sharciyeysay horaantii sanadihii 1970kii.<ref> name="Coulmas 140" Daniels and Bright (1996), pp 92–96</ref> 
+'''Soomaali Alifbeet''' ({{lang-en|Somali alphabet}}; {{lang-ar|الأبجدية الصومالية}}) waa nidaam [[xaraf|xarfo]] loo habeeyay si kala horeeysa taasi oo loo isticmaalo in lagu qoro [[Af Soomaali|Luuqada Soomaaliga]]. Alifbeetku waa aasaaska dhammaan wax qorista farta. Tusaale ahaan, [[Af Soomaali]]gu wuxuu leeyahay dhowr nooc oo [[Far Soomaali]] ah, laakiin waxaa si sharci ah loo isticmaala qaabka ''laatiiniga'' oo [[Soomaaliya|dowlada Soomaaliya]] sharciyeysay horaantii sanadihii 1970kii.<ref> name="Coulmas 140" Daniels and Bright (1996), pp 92–96</ref> 
 ==Hordhac==
 Alifbeetka Soomaaliga waa afka ah Afro-ka qatanaanayaan, ka tirsan laanta qoyska in ay Kushiti. Waxaa lagaga hadlo sidii afka hooyo adigoo dadka asalkoodu Soomaalida yahay ee Greater Soomaaliya iyo Soomaalida qurbaha a. Soomaali waa luuqad rasmi ah Jamhuuriyadda Federaalka ee Soomaaliya, luqadda qaran ee Jabuuti, iyo af wada shaqayn ah ee gobolka Soomaalida ee Itoobiya. Waxa loo isticmaalaa sida afka ah korsaday adigoo a kooxo dhowr deriska ah qowmiyadaha tirada yar iyo shakhsiyaad.
 
