*Empty MediaWiki Message*

--- a/Gobolada_Soomaaliya.mw
+++ b/Gobolada_Soomaaliya.mw
@@ -14,7 +14,7 @@
 ! bgcolor=lightgrey | Magaalo Madax
 ! bgcolor=lightgrey | Bed ama baaxad 
 ! bgcolor=lightgrey | Tirada dadka
-| bgcolor=white rowspan="19" | [[image:Somalia-regions-states 2.png|250 px]]
+| bgcolor=white rowspan="19" | [[image:Somalia-regions 2nd.png|250 px]]
 |-
 | 1
 | [[Awdal]]
