*Empty MediaWiki Message*

--- a/Darwiishland.mw
+++ b/Darwiishland.mw
@@ -3,7 +3,7 @@
 |conventional_long_name = Darwiishland State of Somalia
 |common_name = Northland
 |image_flag = Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg
-|image_coat = Coat of arms of Somalia.svg
+|image_coat = Darawiish SSC crest.jpg 
 |image_map = location northland.png
 |footnotes = 
 |national_motto = |national_anthem = 
