/* DADKA CAANKA EE KASO JEDA BICIIDE */

--- a/Biciide.mw
+++ b/Biciide.mw
@@ -191,7 +191,8 @@ WAXA kasoo jeeda dad caana oo farabadan oo soo maray dowladihi waqti bilowgi xad
 *abwaan:- siciid ayaanle
 *abwaan:- maxamed diiriye (xujaale)
 *abwaan:- xuseen jaamac
-*abwaan:- aadan cabdi jibriil<ref>http://www.hoygasuugaanta.com/ShireWiririf.html</ref>
+*abwaan:- aadan cabdi
+*Caaqil.Jaamac Faarax jibriil<ref>http://www.hoygasuugaanta.com/ShireWiririf.html</ref>
 
 Mujahidinti SNM....
 *muj.Gadhle cirobay
@@ -199,11 +200,12 @@ Mujahidinti SNM....
 *muj.binate samaysane
 *muj.sicid salax dibow
 *muj.awoowe jirdagale
+*muj.Maxamed Jaamac Faarax
 
 Boqor indha aare https://www.hoygasuugaanta.com/Indha-Aarre.html
 
 
-DHANKA SIYAASADA WAXA kaso jeeda wasiirki arimaha dibada dowladi madaxweyne [[daahir rayaale kaahin]]  [[aadan cilmi dhoolayre]] diktoorka caanka halyeyga ah ee DR [[Aadan mire wayrax]] oodadka reer somaliland ay jecel yihin aqoontaisa iyo daacadnimada u u shqeyo
+DHANKA SIYAASADA WAXA kaso jeeda wasiirki arimaha dibada dowladi madaxweyne [[daahir rayaale kaahin]]  [[aadan cilmi dhoolayre]] diktoorka caanka halyeyga ah ee DR [[Aadan mire wayrax]] Eng.Mohamoud Jama Farah Guled oodadka reer somaliland ay jecel yihin aqoontaisa iyo daacadnimada u u shqeyo
 ,gudoomiyahi xisbiga [[rays]] ee somaliland eng '''maxamed gaafadhi''' wasirka  xanaanada xoolaha somaaliland ee hada dowlada muse bixi,  sido jale jaamac 
 Saalx axmed midhiq, oo ka tirsana Golihi dhexe SNM iyo Aasaasayashu SDF, badhasaabki u horeeyay ee sanaag mr MIDHIQ, siyaasi cali axmed cali yufle,
 
