/* DADKA CAANKA EE KASO JEDA BICIIDE */ Fixed typo, Fixed grammar, Added links

--- a/Biciide.mw
+++ b/Biciide.mw
@@ -178,7 +178,7 @@ magala xebeedka [[berbera]].  Qomiyadani waxay degta magaloyinka [[ceelafweyn]],
 
 ''''Erigavo sanaag somaliland'''
 
-==DADKA CAANKA EE KASO JEDA BICIIDE==
+{{}}==DADKA CAANKA EE KASO JEDA BICIIDE==
 
 WAXA kasoo jeeda dad caana oo farabadan oo soo maray dowladihi waqti bilowgi xadarada, british somaliland, somalia, iyo somaliland ta hada, waxana kamida......
 '''fanka''' abwaanada kala ah
@@ -192,7 +192,7 @@ WAXA kasoo jeeda dad caana oo farabadan oo soo maray dowladihi waqti bilowgi xad
 *abwaan:- maxamed diiriye (xujaale)
 *abwaan:- xuseen jaamac
 *abwaan:- aadan cabdi
-*Caaqil.Jaamac Faarax jibriil<ref>http://www.hoygasuugaanta.com/ShireWiririf.html</ref>
+*Caaqil.Jaamac Faarax Guuleed <ref>http://www.hoygasuugaanta.com/ShireWiririf.html</ref>
 
 Mujahidinti SNM....
 *muj.Gadhle cirobay
