*Empty MediaWiki Message*

--- a/Taleex.mw
+++ b/Taleex.mw
@@ -59,7 +59,7 @@
 |blank_info             =
 |website                = 
 }}
-'''Taleex''' waa degmo ku taal gobolka [[Taleex|Sool]] ee jamhuuriyadda [[Somaliland]]. Taleex waa magaalo Taarikhiya, waa hoygii halganka gumeysi diidka ee Soomaaliyeed, waana xarun taliskii  halganka Daraawiishtii ee uu hogaaminayey Mujaahid Sayid Maxamaed  Cabdule Xasan. 
+'''Taleex''' waa degmo [[Nur Axmed]] oo Maxamuud garaad Dhulbahante ah, oo caasimadda Darawiishta ahayd. Sidaas darteed, waxaa Nur Axmed lagu magac dheereeya iney yihiin khaadimka qalcaddii Sayyidka, ama Nur Axmed iney yihiin khaadimka daartii Sayyidka. 
 
 ==Taariikhii==
 [[File:Calankii darawiish.png|thumb|Calankii Daraawiish]]
