*Empty MediaWiki Message*

--- a/Taleex.mw
+++ b/Taleex.mw
@@ -17,12 +17,12 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            =Somaliland
+|pushpin_map            =
 |pushpin_label_position =bottom
 |pushpin_mapsize        =
-|pushpin_map_caption    =Location in Somaliland
+|pushpin_map_caption    =
 |subdivision_type       =Country
-|subdivision_name       ={{flag|Somaliland}}
+|subdivision_name       ={{Flagicon image|Hoggaanka Mideynta deegaanada darawiish ee Sool Sanaag iyo Cayn - SSC flag.jpg}} [[SSC]]
 |subdivision_type1      =[[Administrative divisions of Somalia|Region]]
 |subdivision_name1      =[[Taleex, Somalia|Taleex]]
 |subdivision_type2      =[[Administrative divisions of Puntland|Taleex]]
