--- a/Banaadir.mw
+++ b/Banaadir.mw
@@ -8,7 +8,7 @@
 |image_skyline          =
 |imagesize              = 
 |image_caption          =[[Muqdisho]]
-|image_flag             = 
+|image_flag             = Banaadir calan.gif
 |image_seal             = 
 |image_shield           = 
 |image_map              =Somalia-Mogadishu.png
