*Empty MediaWiki Message*

--- a/Muqdisho.mw
+++ b/Muqdisho.mw
@@ -6,7 +6,7 @@
 |image_size = 350px
 |image_caption =
 |nickname = ''Xamar'' ({{lang-en|''Hamar''}})
-|image_flag =
+|image_flag =Banaadir calan.gif
 |image_caption =
 |image_seal =
 |image_map =
