*Empty MediaWiki Message*

--- a/SSC_(dhulka_Darawiish).mw
+++ b/SSC_(dhulka_Darawiish).mw
@@ -46,7 +46,7 @@
 |cctld = [[.so]]
 }}
 
-'''SSC''' ama '''Sool Sanaag iyo Cayn''' waa hoggaanka hadbaadinta iyo mideynta Maakhir iyo Khaatumo ee [[dhulka Soomaaliyeed]].
+'''SSC''' ama '''Sool Sanaag iyo Cayn''' waa hoggaanka hadbaadinta iyo mideynta [[Maakhir]] iyo [[Khaatumo]] ee [[dhulka Soomaaliyeed]].
 
 ==Taariikh==
 [[File:Flag of SSC.svg|thumb|Calankii hore]]
