--- a/Khaatumo.mw
+++ b/Khaatumo.mw
@@ -44,7 +44,7 @@ Inkastoo 20kii Oktoobar [[2017]] magaalada [[Caynabo]] , waxaa heshiis lala gala
 
 ==Taariikh ==
 Magaca Khaatumo waxaa laga soo qaatay eray carabi ah oo macnaheedu yahay "gabagabada wanaaga." Ujeeddada maamulku wuxuu yahay in horumarka iyo xasilloonida loo soo qaado gobolka iyada oo la dhisayo dawlad maxalli ah. Taariikh ahaan, gobollada Sool, Sanaag iyo Cayn (SSC) ee Soomaaliya waxay u adeegeen labada kursi ee [[Suldanadi Warsangali]] iyo [[Dowladii Daraawiishta|Dawlad goboleedka Daraawiishta]]. 
-[[File:Insignia - SSC ee beelaha darawiish.jpg|thumb|left|Xaflad ku saabsan Khaatumo oo lagu qabtay [[Dubay]] (2013).]]
+[[File:Insignia - SSC ee beelaha darawiish.jpg|thumb|left|astaanta iyo calanka khaatumo (darawiish).]]
 Maamulida dhulka waxaa ku muransan Dowlad Goboleedka Khaatumo (oo hore u eheed HBM-SSC ama Hoggaanka Badbaadada iyo Mideynta SSC), ismaamul goboleedka Soomaaliyeed ee [[Puntland]], iyo ismaamul goboleedka [[somaliland]]<ref>[http://wardheernews.com/Articles_2010/June/Buh/29_Somaliland_recognition_&_the_HBM-SSC_Factor.html Somaliland’s Quest for International Recognition and the HBM-SSC Factor] {{webarchive|url=https://web.archive.org/web/20120528122058/http://wardheernews.com/Articles_2010/June/Buh/29_Somaliland_recognition_%26_the_HBM-SSC_Factor.html |date=28 May 2012 }}</ref>. Sida ee sheegeen [[Ururka Dhaqdhaqaaqa Waqooyiga Soomaaliya]] (NSUM), hiigsiga Khaatumo State, NSUM wuxuu u taagan yahay dhiirrigelinta nabadda, dib u hishiisiinta iyo midnimada dhammaan dadka ka socda Soomaaliya. Ururku ma aqoonsana madax bannaanida gooni isutaagga Somaliland . Waxa kale oo ay ka soo horjeedaan qabsashadii 2007 ee gobolka Sool oo ay galeen ciidamada Somaliland . <ref name="NSUMau">{{Cite web|title=About us: Northern Somali Unionist Movement (NSUM) |url=http://n-sum.org/?q=node/7 |archiveurl=https://web.archive.org/web/20120216140612/http://n-sum.org/?q=node%2F7 |archivedate=16 February 2012 |url-status=dead }}</ref> Sannadkii 2010, maleeshiyaadka NSUM waxay ku lug lahaayeen isku dhac dhax maray iyaga iyo maliishiyaad reer Somaliland ah meel u dhaw tuulada [[Widhwidh]] , ee gobolka Cayn ee Soomaaliya.
 Sanadkii 2012, maamulka Khaatumo State ayaa la soo gabagabeeyey kadib shirar isdaba joog ah oo gudaha iyo dibadaba ah oo bilaawdey 2007dii oo u dhaxeeyay siyaasiyiin caan ah, madax dhaqameed iyo dadka deegaanka. Caasimadda dhulku waxay markii hore ahayd [[Taleex]] . Ilaa Agoosto 2014.
 
